correct overflow-x hidden

--- a/css/media.css
+++ b/css/media.css
@@ -369,7 +369,6 @@
 @media screen and (min-width: 780px) {
     body {
         width: inherit;
-        overflow-x: hidden;
         z-index: 0; }
 
     nav{
